# BlueC

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
bluec-tests/: Cargo.toml  build.rs
bluec-tests/tests/: README.md  generate_expected_results.sh
libbluec/: Cargo.toml  all.html  index.html  macro.ICE!.html  macro.ICE.html  sidebar-items.js
libbluec/codegen/: fn.codegen.html  index.html  sidebar-items.js
libbluec/compiler_driver/: enum.CompilerGeneratedFile.html  enum.DriverError.html  enum.SuggestedCode.html  enum.WarningKind.html  index.html  sidebar-items.js  struct.Diagnostic.html  struct.Driver.html  struct.Error.html  struct.Warning.html
libbluec/core/: enum.SymbolKind.html  fn.ICE.html  index.html  sidebar-items.js  struct.FilePosition.html  struct.SourceIdentifier.html  struct.SourceLocation.html  struct.TempFile.html
libbluec/ir/: enum.BtBinaryOp.html  enum.BtConstantValue.html  enum.BtDefinition.html  enum.BtInstruction.html  enum.BtStaticStorageInitializer.html  enum.BtType.html  enum.BtUnaryOp.html  enum.BtValue.html  fn.translate.html  index.html  sidebar-items.js  struct.BtFunctionDefn.html  struct.BtLabelIdentifier.html  struct.BtRoot.html  struct.BtStaticConstant.html  struct.BtStaticStorageVariable.html  struct.BtSwitchCase.html
libbluec/lexer/: enum.FloatLiteralSuffix.html  enum.IntegerLiteralSuffix.html  enum.NumericLiteralBase.html  enum.TokenType.html  fn.lex.html  fn.lex_buf_reader.html  index.html  sidebar-items.js  struct.SourceLocation.html  struct.Token.html
(+1195 files in other folders)
