[package]
name = "bluec-tests"
version = "0.3.0"
edition = "2024"
authors = ["Neil Henderson <neil@bluetarpmedia.com>"]
description = "Integration tests for the BlueC library"

[dev-dependencies]
libbluec = { path = "../libbluec" }
serde_json = "1"

[build-dependencies]
glob = "0.3.2"
serde_json = "1"
